# ed2022

./: CMakeLists.txt
Arvores/: MinhaArvore.c
Avaliacoes/Av1/: Av1  Av1.c
Avaliacoes/ListaTemasTCC/: principal.c
Listas/LDE/: llde.c
Listas/LSE/: introducao.c
Matrizes/: ex1.c  ex2.c  ex4.c  teatro.c
Ponteiros/: ex01.c  ex03.c  info.c  introducao.c  tamanho.c
Registros/: ExSlide.c  MoodleEx1.c  MoodleEx2.c
Strings/: Ex01.c  Ex02.c  Ex03.c  Ex04.c  Ex05.c  Ex06.c  Exemplo01.c
Vetores/: ex1.c  ex3.c  ex8.c
