cmake_minimum_required(VERSION 3.22)
project(ED2022 C)

set(CMAKE_C_STANDARD 99)

add_executable(ED2022 main.c Vetores/ex1.c Vetores/ex3.c Vetores/ex8.c Matrizes/ex1.c Matrizes/ex2.c Matrizes/ex4.c Matrizes/teatro.c Registros/ExSlide.c Registros/MoodleEx1.c Registros/MoodleEx2.c Strings/Exemplo01.c Strings/Ex01.c Strings/Ex02.c Strings/Ex03.c Strings/Ex04.c Strings/Ex05.c Strings/Ex06.c Ponteiros/introducao.c Ponteiros/tamanho.c Ponteiros/info.c Ponteiros/ex01.c)